# flask-template

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app_name/: __init__.py  config.py
app_name/auth/: auth.py
app_name/auth/static/css/: login.css
app_name/auth/templates/auth/: login.html
app_name/main/: main.py
app_name/main/static/css/: index.css
app_name/main/templates/main/: index.html
app_name/models/: user.py
app_name/templates/: 404.html
